Recuperar datos user y eliminar cuenta

--- a/Frontend/app/src/main/res/layout/activity_main.xml
+++ b/Frontend/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
         android:layout_margin="20dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="@string/insert_email"
+        android:hint="@string/insert_email_hint"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/welcomeText"
@@ -78,7 +78,7 @@
         android:layout_margin="20dp"
         android:layout_marginTop="2dp"
         android:ems="10"
-        android:hint="@string/insert_pwd"
+        android:hint="@string/insert_pwd_hint"
         android:inputType="textPassword"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
