--- a/Frontend/app/src/main/res/layout/edit_profile.xml
+++ b/Frontend/app/src/main/res/layout/edit_profile.xml
@@ -66,6 +66,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:inputType="textPassword"
         android:text="@string/password"
         android:textAlignment="viewStart"
         android:textColor="@color/black"
@@ -74,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editEmailButton" />
 
     <Button
-        android:id="@+id/deleteAccount"
+        android:id="@+id/deleteAccountButton"
         style="@style/Widget.Material3.Button.TextButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
