--- a/Frontend/app/src/main/res/layout/fragment_login.xml
+++ b/Frontend/app/src/main/res/layout/fragment_login.xml
@@ -65,7 +65,7 @@
         android:layout_margin="20dp"
         android:layout_marginTop="2dp"
         android:ems="10"
-        android:hint="@string/insert_pwd_hint"
+        android:hint="@string/hint_pwd"
         android:inputType="textPassword"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
