--- a/Frontend/app/src/main/res/values/colors.xml
+++ b/Frontend/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="primary">#4CAF50</color>
     <color name="primary_light">#81C784</color>
     <color name="accent">#FFC107</color>
+    <color name="accent_light">#FFF9C4</color>
     <color name="primary_text">#212121</color>
     <color name="secondary_text">#757575</color>
     <color name="soft_green">#E8F5E9</color>
