--- a/Frontend/app/src/main/res/values/themes.xml
+++ b/Frontend/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <item name="colorPrimary">@color/primary</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
-        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="android:textColorSecondary">@color/white</item>
 
     </style>
    <style name="MyButtonStyle" parent="Theme.LocalMarket">
