--- a/Frontend/app/src/main/res/layout/editpassword_fragment.xml
+++ b/Frontend/app/src/main/res/layout/editpassword_fragment.xml
@@ -6,31 +6,21 @@
     android:background="@color/soft_green"
     android:padding="16dp">
 
-    <!-- Icono back -->
-    <ImageView
-        android:id="@+id/turnBackIcon"
-        android:layout_width="38dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/turn_back"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <TextView
         android:id="@+id/password"
         android:layout_width="125dp"
         android:layout_height="60dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="56dp"
+        android:gravity="center"
         android:text="@string/password"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toStartOf="@+id/buttonListo"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/turnBackIcon"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -50,18 +40,21 @@
         android:id="@+id/actualPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="100dp"
         android:hint="@string/indroduce_password_actual"
         android:inputType="textPassword"
         android:minHeight="48dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/buttonListo"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/password" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <EditText
         android:id="@+id/newPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"
         android:hint="@string/introduce_new_password"
         android:inputType="textPassword"
@@ -74,6 +67,7 @@
         android:id="@+id/repeatPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="16dp"
         android:hint="@string/introduce_new_password"
         android:inputType="textPassword"
