--- a/Frontend/app/src/main/res/layout/signup_fragment.xml
+++ b/Frontend/app/src/main/res/layout/signup_fragment.xml
@@ -68,14 +68,24 @@
                 app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />
 
             <Button
-                android:id="@+id/buttonSignUp"
-                android:layout_width="match_parent"
+                android:id="@+id/buttonCancel"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:text="@string/cancel"
+                app:layout_constraintBottom_toBottomOf="@+id/buttonSignUp"
+                app:layout_constraintStart_toStartOf="@+id/switchUserType"
+                app:layout_constraintTop_toTopOf="@+id/buttonSignUp"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <Button
+                android:id="@+id/buttonSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
                 android:text="@string/sing_up"
                 app:layout_constraintEnd_toEndOf="@+id/editTextPassword"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="@+id/editTextPassword"
+                app:layout_constraintHorizontal_bias="0.088"
+                app:layout_constraintStart_toEndOf="@+id/buttonCancel"
                 app:layout_constraintTop_toBottomOf="@+id/switchUserType" />
 
             <com.google.android.material.textfield.TextInputEditText
