+ modificacion del hint del fragment_login.xml.

--- a/Frontend/app/src/main/res/layout/fragment_login.xml
+++ b/Frontend/app/src/main/res/layout/fragment_login.xml
@@ -49,12 +49,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="@string/insert_email_hint"
+        android:hint="@string/username"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="@+id/welcomeText"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="@+id/welcomeText"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
