editar perfil ok salvo contraseña

--- a/Frontend/app/src/main/res/layout/editpassword_fragment.xml
+++ b/Frontend/app/src/main/res/layout/editpassword_fragment.xml
@@ -36,32 +36,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/actualPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="100dp"
-        android:hint="@string/indroduce_password_actual"
-        android:inputType="textPassword"
-        android:minHeight="48dp"
-        app:layout_constraintEnd_toStartOf="@id/buttonListo"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <EditText
         android:id="@+id/newPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="100dp"
         android:hint="@string/introduce_new_password"
         android:inputType="textPassword"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/actualPassword" />
+        app:layout_constraintTop_toBottomOf="@id/buttonListo" />
 
     <EditText
         android:id="@+id/repeatPassword"
