+ Modificacion de ActivitySellerLobby y Activity_seller_lobby, creacion de fragment para crear nuevos productos.

--- a/Frontend/app/src/main/res/values/themes.xml
+++ b/Frontend/app/src/main/res/values/themes.xml
@@ -16,6 +16,11 @@
         <!-- No se define ningún atributo -->
     </style>
 
+    <style name="SpinnerTheme" parent="Widget.AppCompat.Spinner.Underlined">
+
+        <item name="colorControlNormal">@color/black</item> <!-- Color de la flecha -->
+    </style>
+
 
 
     <style name="Theme.LocalMarket" parent="Base.Theme.LocalMarket" />
