+Realizado el modelo de datos para el server +implementado el endpoint para el AuthService +Generado el codigo necesario en el AuthService.java para subir el Product al server +Modificacion de la activity_seller_lobby.xml además de la creacion del fragment_add_product.xml para la creacion de los productos por parte del seller +Reorganizacion de los directorios para hacer que el proyecto sea más facil de estructurar.

--- a/Frontend/app/src/main/res/layout/activity_seller_lobby.xml
+++ b/Frontend/app/src/main/res/layout/activity_seller_lobby.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/soft_green"
-    tools:context=".ActivitySellerLobby"
+    tools:context=".activities.ActivitySellerLobby"
     android:theme="@style/Base.Theme.LocalMarket">
 
     <androidx.appcompat.widget.Toolbar
