--- a/Frontend/app/src/main/res/layout/activity_user_lobby.xml
+++ b/Frontend/app/src/main/res/layout/activity_user_lobby.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/soft_green"
-    tools:context=".ActivityUserLobby"
+    tools:context=".activities.ActivityUserLobby"
     android:theme="@style/Base.Theme.LocalMarket">
 
     <androidx.appcompat.widget.Toolbar
