Editar y eliminar producto listo para testear

--- a/Frontend/app/src/main/res/layout/edit_profile.xml
+++ b/Frontend/app/src/main/res/layout/edit_profile.xml
@@ -7,30 +7,30 @@
     android:background="@color/soft_green"
     tools:context=".activities.MainActivity">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:subtitleTextColor="@color/white"
+        app:title="@string/app_name"
+        app:titleTextColor="@color/white"
+        tools:layout_editor_absoluteX="0dp" />
+
     <TextView
         android:id="@+id/dataTitle"
         android:layout_width="130dp"
         android:layout_height="70dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="100dp"
         android:gravity="center_vertical"
-
         android:text="Mi perfil"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textName"
-        app:layout_constraintEnd_toStartOf="@+id/logoImageView"
-        app:layout_constraintHorizontal_bias="0.175"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/logoImageView"
-        android:layout_width="130dp"
-        android:layout_height="70dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/logo"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
@@ -48,6 +48,9 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/labelName"
         app:layout_constraintTop_toBottomOf="@+id/dataTitle" />
+
+
+
 
     <Button
         android:id="@+id/textSurname"
@@ -190,11 +193,12 @@
         android:id="@+id/fragment_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
