--- a/Frontend/app/src/main/res/layout/edit_product.xml
+++ b/Frontend/app/src/main/res/layout/edit_product.xml
@@ -6,19 +6,17 @@
     android:background="@color/soft_green"
     tools:context=".activities.EditProductActivity">
 
+
     <TextView
         android:id="@+id/editarProducto"
         android:layout_width="200dp"
         android:layout_height="60dp"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="156dp"
+        android:layout_marginTop="56dp"
         android:gravity="center"
         android:text="Editar producto"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintEnd_toStartOf="@+id/buttonListo"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -27,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,7 +48,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="30dp"
         android:hint="Descripción del Producto"
         app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +60,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="30dp"
         android:hint="Tipo de Peso"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +72,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="25dp"
         android:layout_marginEnd="30dp"
         android:hint="Precio"
         app:layout_constraintEnd_toEndOf="parent"
@@ -82,30 +80,40 @@
         app:layout_constraintTop_toBottomOf="@id/editTextWeight" />
 
     <Button
-        android:id="@+id/buttonListo"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="90dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="28dp"
+        android:id="@+id/btnGuardar"
+        android:layout_width="88dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="30dp"
         android:text="@string/listo"
-        android:textColor="@color/black"
-        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />
+
+    <Button
+        android:id="@+id/btnCancelar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="25dp"
+        android:text="@string/cancel"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextPrice" />
 
     <Button
         android:id="@+id/buttonEliminarProducto"
         style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="150dp"
+        android:layout_marginEnd="30dp"
         android:text="Eliminar Producto"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTextPrice" />
+        app:layout_constraintTop_toBottomOf="@id/btnGuardar" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
