+ Cambiado el nombre de las variables de Product.java + Modificado los editText de LoginFragment a Material design

--- a/Frontend/app/src/main/res/values/themes.xml
+++ b/Frontend/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.LocalMarket" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.LocalMarket" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorAccent">@color/accent</item>
         <item name="android:textColorPrimary">@color/primary_text</item>
@@ -19,6 +19,16 @@
     <style name="SpinnerTheme" parent="Widget.AppCompat.Spinner.Underlined">
 
         <item name="colorControlNormal">@color/black</item> <!-- Color de la flecha -->
+    </style>
+
+    <style name="CustomTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <item name="hintTextAppearance">@style/MyCustomHintAppearance</item>
+        <!-- Otros elementos de personalización -->
+    </style>
+
+    <style name="MyCustomHintAppearance" parent="TextAppearance.Design.Hint">
+        <item name="android:textSize">12sp</item>
+        <!-- Otros elementos de personalización -->
     </style>
 
 
