--- a/Frontend/app/src/main/res/layout/fragment_login.xml
+++ b/Frontend/app/src/main/res/layout/fragment_login.xml
@@ -47,14 +47,15 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutEmail"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
-        tools:layout_editor_absoluteX="16dp"
-        app:boxCollapsedPaddingTop="16dp"
         android:layout_margin="20dp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+        android:layout_marginTop="24dp"
+        app:boxCollapsedPaddingTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/welcomeText">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextTextEmailAddress"
@@ -67,7 +68,6 @@
             app:layout_constraintStart_toStartOf="@+id/welcomeText"
             app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -75,12 +75,13 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="20dp"
         android:layout_marginTop="16dp"
         android:hint="@string/hint_pwd"
-        android:layout_margin="20dp"
         app:endIconMode="password_toggle"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
-        tools:layout_editor_absoluteX="30dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextTextPassword"
