+ modificacion de ActivitySellerLobby y creacion de SellerProductFragment para gestionar el contenido de productos.

--- a/Frontend/app/src/main/res/layout/activity_seller_lobby.xml
+++ b/Frontend/app/src/main/res/layout/activity_seller_lobby.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/soft_green"
-    tools:context=".activities.ActivitySellerLobby"
-    android:theme="@style/Base.Theme.LocalMarket">
+    android:theme="@style/Base.Theme.LocalMarket"
+    tools:context=".activities.ActivitySellerLobby">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
@@ -22,31 +22,6 @@
         app:titleTextColor="@color/white"
         tools:layout_editor_absoluteX="0dp" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="@string/product_main"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.107"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/addProduct"
-        android:layout_width="49dp"
-        android:layout_height="50dp"
-        android:gravity="center"
-        app:icon="@android:drawable/ic_input_add"
-        app:iconGravity="textStart"
-        app:iconPadding="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="@+id/textView" />
-
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_container2"
@@ -58,14 +33,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar2" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/reciclerViewProducts"
-        android:layout_width="match_parent"
-        android:layout_height="665dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
