+ Añadir producto implementado

--- a/Frontend/app/src/main/res/layout/fragment_seller_product.xml
+++ b/Frontend/app/src/main/res/layout/fragment_seller_product.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.SellerProductFragment"
-    android:background="@color/soft_green">
+    android:background="@color/soft_green"
+    tools:context=".fragments.SellerProductFragment">
 
 
     <com.google.android.material.button.MaterialButton
@@ -21,17 +21,31 @@
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toTopOf="@+id/textView" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/reciclerViewProducts"
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="665dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="84dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        tools:layout_editor_absoluteX="16dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reciclerViewProducts"
+            android:layout_width="match_parent"
+            android:layout_height="10000dp"
+            android:layout_marginTop="28dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintVertical_bias="0.0" />
+        </LinearLayout>
+    </ScrollView>
 
     <TextView
         android:id="@+id/textView"
