--- a/Frontend/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Frontend/app/src/main/res/menu/bottom_nav_menu.xml
@@ -16,6 +16,13 @@
         />
 
     <item
+        android:id="@+id/carrito"
+        android:icon="@drawable/shopping_basket_18"
+        android:title="Item"
+
+        app:showAsAction="always" />
+
+    <item
         android:id="@+id/nav_profile"
         android:title="Perfil"
         />
