+Implementacion del map i el selector de distancia i previa implementacion filtrado por distancia de los productores. +modificacion de User i AuthService.signUpUser para que acepte latitud i longitud

--- a/Frontend/app/src/main/res/layout/fragment_map.xml
+++ b/Frontend/app/src/main/res/layout/fragment_map.xml
@@ -25,12 +25,12 @@
         android:id="@+id/mapView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/seekBar"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:fillViewport="true"
-        tools:layout_editor_absoluteX="170dp" />
+        app:layout_constraintBottom_toTopOf="@+id/textView6"
+        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        tools:layout_editor_absoluteX="-32dp" />
 
     <SeekBar
         android:id="@+id/seekBar"
@@ -40,8 +40,32 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="20dp"
         android:progressBackgroundTint="@color/black"
+        android:max="19000"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
+
+    <TextView
+        android:id="@+id/tvDistance"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        app:layout_constraintStart_toEndOf="@+id/textView6"
+        app:layout_constraintTop_toTopOf="@+id/textView6"
+        tools:text="20km" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/tv_distancia"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/seekBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.315"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
