+ Implementados recursos de ui si el recicler view esta vacio para que ui/ux sea mas amigable.

--- a/Frontend/app/src/main/res/layout/fragment_user_product.xml
+++ b/Frontend/app/src/main/res/layout/fragment_user_product.xml
@@ -36,6 +36,15 @@
             android:layout_height="wrap_content" />
     </androidx.core.widget.NestedScrollView>
 
+    <Button
+        android:id="@+id/buttonMapFragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/search_button_productors"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
